# deptypes

./: Cargo.toml  README.md
deptypes/: Cargo.toml
deptypes/src/: fin.rs  iter.rs  kinds.rs  lib.rs  linkerror.rs  loops.rs  newtype.rs  ops.rs  pair.rs  result.rs  slice.rs  term.rs  transmutable.rs  type_eq.rs  unreachable.rs  var.rs  vec.rs  zst.rs
deptypes/src/bool/: and.rs  mod.rs  not.rs  or.rs  xor.rs
deptypes/src/int/: add.rs  mod.rs  neg.rs  sub.rs  uint.rs
deptypes_extra/: Cargo.toml
deptypes_extra/src/: induction.rs  lib.rs  total.rs
src/: fin.rs  induction.rs  iter.rs  lib.rs  linkerror.rs  newtype.rs  ops.rs  pair.rs  result.rs  slice.rs  term.rs  total.rs  transmutable.rs  type_eq.rs  uninhabited.rs  var.rs  vec.rs
src/bool/: mod.rs  not.rs
src/uint/: add.rs  mod.rs
